# yvideo-py

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
.github/workflows/: pre-commit.yaml
IC_player/: IC_Player.sh  README.md  package-lock.json  package.json  preload.js
IC_player/resources/Lobster/: OFL.txt
IC_player/resources/example/: kungfu.vtt
IC_player/scripts/: hms2s.py  hummedia2ic.py  interpolate.py  old_hummedia2ic.py  sort_json.py  template.py
core/: admin.py  api.py  logic.py  models.py  tests.py  urls.py  views.py
core/static/: style.css
core/static/js/: video-and-controls.js
core/templates/core/: base.html  collection_list.html  create_collection.html  header.html  index.html  load_collection.html  manage_collections.html  player.html  video-and-controls.html
old/: README.md
old/react-app/: setupTests.js
old/react-app/__tests__/: README.md  index.test.jsx
old/react-app/__tests__/testutil/: testutil.jsx
old/react-app/components/bits/: index.js
old/react-app/components/common/: timeConversion.js
old/react-app/containers/: index.js
old/react-app/containers/c/: BreadcrumbContainer.jsx  EventsContainer.jsx  ManageCollectionContainer.jsx  ResourceOverviewContainer.jsx
old/react-app/models/: ResourceObject.js
old/react-app/services/: store.js
yvideo/: asgi.py  manage.py  secret_settings_template.py  settings.py  urls.py  views.py  wsgi.py
yvideo/yvideo/: admin.py  asgi.py  models.py  secret_settings_template.py  settings.py  urls.py  views.py  wsgi.py
yvideo/yvideo/templates/: index.html
(+103 files in other folders)
