[project]
name = "yvideo-py"
version = "0.1.0"
description = "Copyright-safe course-based media sharing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-reversion>=5.1.0",
    "django>=5.2.3",
    "xxhash>=3.5.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.2.0",
    "pre-commit>=3.0.0",
    "ruff>=0.1.0",
]
